# FIR

./: .clang-format  CMakeLists.txt  README.md
PyInteractor/: OSEM.py  backward.py  call_exec.py  forward.py  interfile_io.py  proj.py  proj_reader.py  scanner.py  scanner_generator.py  vol.py  vol_conversions.py
src_bin/: BackProj.cc  CMakeLists.txt  ForwardProj.cc  OSEM.cc
src_lib/: CMakeLists.txt  KeyParser.cc  KeyParser.h  LORCache.cc  LORCache.h  ProjData.cc  ProjData.h  ProjData.inl  ProjHeader.cc  ProjHeader.h  ProjHeader.inl  ProjInterfileReader.cc  ProjInterfileReader.h  ProjInterfileReader.inl  ScannerData.cc  ScannerData.h  ScannerData.inl  ScannerHeader.cc  ScannerHeader.h  ScannerInterfileReader.cc  ScannerInterfileReader.h  Siddon.cc  Siddon.h  VolData.cc  VolData.h  VolData.inl  VolHeader.cc  VolHeader.h  VolHeader.inl  VolInterfileReader.cc  VolInterfileReader.h  VolInterfileReader.inl  console.h  console.inl  macros.h  operations.cc  operations.h  projections.cc  projections.h  reconAlgos.cc  (+9 more)
src_test/: CMakeLists.txt  ProjHeaderUnitTest.cc  ProjInterfileReaderUnitTest.cc  SiddonUnitTest.cc
src_test/TestResources/: demo.hs
